# opendrop

./: Cargo.toml  Makefile  README.md  build.rs
packaging/: opendrop.desktop
packaging/deb/: postinst
src/: lib.rs  main.rs  pdf.rs
src/device/: mock.rs  mod.rs  usb2000.rs
src/formats/: error.rs  mod.rs  model.rs  reader.rs  writer.rs
src/measure/: calc.rs  constants.rs  mod.rs  protein.rs  spectrum.rs
tests/: fixtures_roundtrip.rs
tests/fixtures/: Nucleic Acid 2007 06 04.ndj  report_sample.ndv
ui/: about.slint  app.slint  busy_dialog.slint  input_dialog.slint  main_menu.slint  message_dialog.slint  nucleic_acid.slint  plot.slint  samples_table.slint  theme.slint  types.slint  widgets.slint
